Add User to OpenAPI
