# api/timetrack/v1/openapi.yaml
@@ -84,7 +84,20 @@ components:
 
     User:
       type: object
-      # ...
+      required: [id, passportNumber, surname, name, address]
+      properties:
+        id:
+          type: integer
+        passportNumber:
+          type: string
+        surname:
+          type: string
+        name:
+          type: string
+        patronymic:
+          type: string
+        address:
+          type: string
 
     UserCreate:
       type: object
