# api/timetrackapi/v1/timetrackapi.go
@@ -26,7 +26,14 @@ type Health struct {
 }
 
 // User defines model for User.
-type User = map[string]interface{}
+type User struct {
+	Address        string  `json:"address"`
+	Id             int     `json:"id"`
+	Name           string  `json:"name"`
+	PassportNumber string  `json:"passportNumber"`
+	Patronymic     *string `json:"patronymic,omitempty"`
+	Surname        string  `json:"surname"`
+}
 
 // UserCreate defines model for UserCreate.
 type UserCreate struct {
